remove light dark temporarely, fix burgermenue

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
         </div>
     </main>
-    <script src="/assets/js/nav-theme.js"></script>
+    <script src="assets/js/nav-theme.js"></script>
             <h2>A Song</h2>
                 <p>Cause why not?</p>
         <div id="spotify-embed"></div>
