--- a/test.html
+++ b/test.html
@@ -59,6 +59,6 @@
             <a href="https://discord.gg/VNrzdd5ErJ" class="btn">Join Discord</a>
         </div>
     </main>
-    <script src="/assets/js/nav-theme.js"></script>
+    <script src="assets/js/nav-theme.js"></script>
 </body>
 </html>
