--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <p>Thank you for your support!</p>
         </div>
     </main>
-    <script src="/assets/js/nav-theme.js"></script>
+    <script src="assets/js/nav-theme.js"></script>
     <h2>A Song</h2>
     <p>Cause why not?</p>
     <div id="spotify-embed"></div>
