--- a/oer.html
+++ b/oer.html
@@ -73,7 +73,7 @@
             <p>Thank you for supporting OER!</p>
         </div>
     </main>
-    <script src="/assets/js/nav-theme.js"></script>
+    <script src="assets/js/nav-theme.js"></script>
             <h2>A Song</h2>
                 <p>Cause why not?</p>
         <div id="spotify-embed"></div>
