--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <div class="card">
             <h2>Our Team</h2>
             <p>We are a small, dedicated team of developers with a shared love for Minecraft and its modding community. We are committed to providing high-quality, reliable mods for everyone to enjoy.</p>
-            <a href="https://github.com/Mooo0042" class="btn">Us3r0 - GitHub</a>
+            <a href="https://github.com/Mooo0042" class="btn">Fr4gm3nt3d.sh (prev. Us3r0) - GitHub</a>
             <a href="https://github.com/Shadowbee27" class="btn">Shadowbee - GitHub</a>
         </div>
 
