More design Improvements + Updated Navbar/Burger Menu

--- a/impr.html
+++ b/impr.html
@@ -31,6 +31,7 @@
                             <a href="impr.html">IMP Renewed</a>
                             <a href="oer.html">Otyacraft Engine Renewed</a>
                         </div>
+                        <a href="testing.html" class="active">Test Uploads</a>
                     </div>
                 </div>
             </div>
@@ -74,15 +75,5 @@
         </div>
     </main>
     <script src="assets/js/nav-theme.js"></script>
-            <h2>A Song</h2>
-            <p>Cause why not?</p>
-        <div id="spotify-embed"></div>
-            <script>
-                fetch('embedd.txt') // adjust path if needed
-                    .then(res => res.text())
-                    .then(code => {
-                        document.getElementById('spotify-embed').innerHTML = code;
-                        });
-            </script>
 </body>
 </html>
