--- a/testing.html
+++ b/testing.html
@@ -88,7 +88,7 @@
                             <a href="oer.html">Otyacraft Engine Renewed</a>
                         </div>
                     </div>
-                    <a href="test-uploads.html" class="active">Test Uploads</a>
+                    <a href="testing.html" class="active">Test Uploads</a>
                 </div>
             </div>
 
