--- a/navbar.html
+++ b/navbar.html
@@ -22,6 +22,8 @@
                     </div>
                 </div>
                 <a href="testing.html">Test Uploads</a>
+                <a href="https://github.com/Mod-Sauce/" target="_blank">Github</a>
+                <a href="https://codeberg.org/Mod-Sauce/" target="_blank">Codeberg</a>
             </div>
         </div>
 
